--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/app_logo"
         android:requestLegacyExternalStorage="true"
+        android:configChanges="keyboardHidden|orientation|screenSize"
         android:usesCleartextTraffic="true"
         android:supportsRtl="true"
         android:networkSecurityConfig="@xml/network_security_config"
@@ -68,8 +69,8 @@
 
         <activity android:name=".Profile.FollowingActivity" />
         <activity android:name=".Profile.FollowersActivity" />
-        <activity android:name=".addpost.post" />
-        <activity android:name=".addpost.gallery" />
+<!--        <activity android:name=".addpost.post" />-->
+<!--        <activity android:name=".addpost.gallery" />-->
 
 
         <activity android:name=".addmedia.pictureselector.MainActivity" />
