--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,8 +17,8 @@ android {
         applicationId "com.alpha.alphanetwork"
         minSdkVersion 21
         targetSdkVersion 29
-        versionCode 2
-        versionName "1.0.1"
+        versionCode 3
+        versionName "1.0.2"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
     }
@@ -80,8 +80,10 @@ dependencies {
 
     implementation 'com.github.AbedElazizShe:LightCompressor:0.6.0'
     implementation 'com.devbrackets.android:exomedia:4.3.0'
-    implementation 'com.danikula:videocache:2.7.1'
-//    implementation 'com.vincan:medialoader:1.0.0'
+//    implementation "im.ene.toro3:toro:3.7.0.2010003"
+//    implementation "im.ene.toro3:toro-ext-exoplayer:3.7.0.2010003"
+//    implementation 'com.danikula:videocache:2.7.1'
+
 //    implementation 'com.iceteck.silicompressorr:silicompressor:2.2.3'
 //    implementation 'com.googlecode.mp4parser:isoparser:1.1.21'
 
