--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.alpha.alphanetwork">
     <!-- To auto-complete the email text field in the login form with the user's emails -->
+
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
@@ -31,13 +32,16 @@
 
     <application
         android:name="Utils.MyApp"
+
         android:allowBackup="true"
         android:icon="@mipmap/app_logo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/app_logo"
+
         android:requestLegacyExternalStorage="true"
         android:configChanges="keyboardHidden|orientation|screenSize"
         android:usesCleartextTraffic="true"
+
         android:supportsRtl="true"
         android:networkSecurityConfig="@xml/network_security_config"
         android:theme="@style/AppTheme"
@@ -73,6 +77,21 @@
         <activity android:name="com.alpha.alphanetwork.Login.Details"/>
 
         <activity android:name="com.alpha.alphanetwork.addmedia.pictureselector.MainActivity" />
+
+
+
+
+
+
+
+<!--        <uses-library android:name="org.apache.http.legacy" android:required="false" />-->
+
+
+
+
+
+
+
     </application>
 
 </manifest>
